fix about page section box shadow color on dark mode

--- a/src/app/styles/about.module.css
+++ b/src/app/styles/about.module.css
@@ -51,8 +51,8 @@
     width: 12.5rem;
     /* margin-top: -6.75vh; */
     position: absolute;
-    top: 50%; /* Move the top edge of the child to the middle of the parent */
-    left: 50%; /* Move the left edge of the child to the middle of the parent */
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
 }
 
@@ -153,7 +153,7 @@
     margin-left: 20px;
     margin-right: 20px;
     padding: 15px;
-    box-shadow: 0px 0px 10px 0px rgba(121, 161, 176, 0.15);
+    box-shadow: 0px 0px 10px 0px var(--color-four);
 }
 
 .ul {
@@ -215,7 +215,7 @@
     width: 100%;
     height: calc(100% - 16px);
     min-width: 0;
-    box-shadow: 0px 0px 10px 0px rgba(121, 161, 176, 0.15);
+    box-shadow: 0px 0px 10px 0px var(--color-four);
     border-radius: var(--border-radius);
 }
 
@@ -245,7 +245,7 @@
     gap: 36px;
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 0px 10px 0px rgba(121, 161, 176, 0.15);
+    box-shadow: 0px 0px 10px 0px var(--color-four);
 }
 
 .image {
